...
          <FormField
            name="name"
            control={form.control}
            render={({ field }) => (
              <FormControl>
                <Input
                  testID="shopping-list-create-input"
                  value={field.value}
                  onChangeText={field.onChange}
                  onBlur={field.onBlur}
                  placeholder="Enter your shopping list name"
                  className="w-full"
                  error={!!form.formState.errors.name}
...
              title="Cancel"
              variant="secondary"
              onPress={handleGoBack}
              className="flex-1"
            />
            <Button
              testID="shopping-list-create-submit"
              title={form.formState.isSubmitting ? "Creating..." : "Create"}
              className="flex-1"
              disabled={form.formState.isSubmitting}
              icon={form.formState.isSubmitting ? "loader" : undefined}
              onPress={form.handleSubmit(handleCreateShoppingList)}
            />
...
