...
              htmlFor="groupName"
            >
              Group Name
            </label>
            <Input
              id="groupName"
              data-testid="group-create-name-input"
              maxLength={256}
              placeholder="Enter group name"
              onChange={(event) => {
                setGroupName(event.target.value);
              }}
              value={groupName}
...
            )}
          </div>

          <Button
            className="w-full"
            type="submit"
            data-testid="group-create-submit"
            disabled={groupMutation.isPending}
          >
            {groupMutation.isPending ? <LoadingSpinner /> : "Create Group"}
          </Button>
        </form>
      </div>
...
